added notebook for llm convo

--- a/llama_test1.ipynb
+++ b/llama_test1.ipynb
@@ -247,7 +247,9 @@
    "source": [
     "---\n",
     "\n",
-    "#### RAG\n",
+    "#### Retrieval Augmented Generation (RAG)\n",
+    "\n",
+    "Build an app that takes user questions about an uploaded PDF. An LLM uses relevant content in the document to answer the questions. \n",
     "\n",
     "Source: https://www.datacamp.com/tutorial/deepseek-r1-ollama"
    ]
@@ -259,9 +261,10 @@
    "source": [
     "Install dependencies\n",
     "\n",
-    "*gradio* for UI  \n",
-    "*langchain* for tool integration  \n",
-    "*chromadb* for vector database"
+    "Components:\n",
+    "- *gradio* for UI  \n",
+    "- *langchain* for tool integration  \n",
+    "- *FAISS* for vector database"
    ]
   },
   {
@@ -616,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 2,
    "id": "f2e8b3a0-c9b8-4775-bff1-b6b4a013c3a0",
    "metadata": {},
    "outputs": [],
@@ -626,7 +629,6 @@
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "#from langchain.vectorstores import Chroma\n",
     "from langchain_community.embeddings import OllamaEmbeddings\n",
-    "#from langchain_community import embeddings\n",
     "from langchain.vectorstores.faiss import FAISS\n",
     "import ollama\n",
     "import re"
@@ -642,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 3,
    "id": "e13c3de1-87e1-4404-a8e0-b8d4d8def016",
    "metadata": {},
    "outputs": [],
@@ -650,15 +652,16 @@
     "def process_pdf(pdf_bytes):\n",
     "    if pdf_bytes is None:\n",
     "        return None, None, None\n",
+    "        \n",
     "    loader = PyMuPDFLoader(pdf_bytes)\n",
     "    data = loader.load()\n",
     "    print('data:', data)\n",
+    "    \n",
     "    text_splitter = RecursiveCharacterTextSplitter(chunk_size=50, chunk_overlap=10)\n",
     "    chunks = text_splitter.split_documents(data)\n",
     "    print('chunks[0]:', chunks[0])\n",
     "    print('chunks[1]:', chunks[1])\n",
-    "    #embed = embeddings.ollama.OllamaEmbeddings(base_url='http://192.168.0.200:11434', model=\"ollama/llama2\")\n",
-    "    #embed = OllamaEmbeddings(base_url='http://localhost:11434', model=\"ollama/llama2\")\n",
+    "\n",
     "    embed = OllamaEmbeddings(base_url='http://localhost:11434', model=\"llama2:latest\")\n",
     "    print('embed:', embed)\n",
     "    #vectorstore=Chroma.from_documents(documents=chunks, embedding=embeddings)\n",
@@ -762,7 +765,28 @@
       "University of Virginia School of Data Science (SDS). CharloƩesville, VA.\n",
       "Capstone Program Director. 8/2023-present\n",
       "Program Co-Director, Online Master’s in Data Science. 9/2022-12/2022' metadata={'producer': 'Microsoft: Print To PDF', 'creator': '', 'creationdate': '2025-01-29T12:17:12-05:00', 'source': 'C:\\\\Users\\\\apt4c\\\\AppData\\\\Local\\\\Temp\\\\gradio\\\\34b58d949817ee04404996ee6afb28921aed932ffc8e59c68771a4131f0f4c24\\\\CV_APT_latest.pdf', 'file_path': 'C:\\\\Users\\\\apt4c\\\\AppData\\\\Local\\\\Temp\\\\gradio\\\\34b58d949817ee04404996ee6afb28921aed932ffc8e59c68771a4131f0f4c24\\\\CV_APT_latest.pdf', 'total_pages': 8, 'format': 'PDF 1.7', 'title': 'CV_APT_latest.doc', 'author': 'Adam Tashman', 'subject': '', 'keywords': '', 'moddate': '2025-01-29T12:17:12-05:00', 'trapped': '', 'page': 0}\n",
-      "embed: base_url='http://localhost:11434' model='llama2:latest' embed_instruction='passage: ' query_instruction='query: ' mirostat=None mirostat_eta=None mirostat_tau=None num_ctx=None num_gpu=None num_thread=None repeat_last_n=None repeat_penalty=None temperature=None stop=None tfs_z=None top_k=None top_p=None show_progress=False headers=None model_kwargs=None\n"
+      "embed: base_url='http://localhost:11434' model='llama2:latest' embed_instruction='passage: ' query_instruction='query: ' mirostat=None mirostat_eta=None mirostat_tau=None num_ctx=None num_gpu=None num_thread=None repeat_last_n=None repeat_penalty=None temperature=None stop=None tfs_z=None top_k=None top_p=None show_progress=False headers=None model_kwargs=None\n",
+      "vectorstore: <langchain_community.vectorstores.faiss.FAISS object at 0x000002A07FDBE6F0>\n",
+      "response: model='llama2:latest' created_at='2025-02-03T14:07:46.133567Z' done=True done_reason='stop' total_duration=151403208700 load_duration=22917900 prompt_eval_count=617 prompt_eval_duration=65185000000 eval_count=206 eval_duration=86194000000 message=Message(role='assistant', content='The following individuals are mentioned in the text:\\n\\n1. Adam P Tashman, PhD, PRM - The author of the text and a speaker at the UCSB Insurtech Summit.\\n2. Finch S. J. - A co-author of the Smoking to First Exposure and Ethnicity study mentioned in the text.\\n3. Gordon D. - Another co-author of the same study.\\n4. Chase G. - A co-author of the study.\\n5. Yang Z. - A co-author of the study.\\n6. Lee J. - A co-author of the study.\\n7. Mendell N. - A co-author of the study.\\n8. Bierut L. - A co-author of the study.\\n9. Johnson E. - A co-author of the study.\\n10. Breslau N. - A co-author of the study.', images=None, tool_calls=None)\n",
+      "final_answer: The following individuals are mentioned in the text:\n",
+      "\n",
+      "1. Adam P Tashman, PhD, PRM - The author of the text and a speaker at the UCSB Insurtech Summit.\n",
+      "2. Finch S. J. - A co-author of the Smoking to First Exposure and Ethnicity study mentioned in the text.\n",
+      "3. Gordon D. - Another co-author of the same study.\n",
+      "4. Chase G. - A co-author of the study.\n",
+      "5. Yang Z. - A co-author of the study.\n",
+      "6. Lee J. - A co-author of the study.\n",
+      "7. Mendell N. - A co-author of the study.\n",
+      "8. Bierut L. - A co-author of the study.\n",
+      "9. Johnson E. - A co-author of the study.\n",
+      "10. Breslau N. - A co-author of the study.\n",
+      "vectorstore: <langchain_community.vectorstores.faiss.FAISS object at 0x000002A029951820>\n",
+      "response: model='llama2:latest' created_at='2025-02-03T14:53:37.5169801Z' done=True done_reason='stop' total_duration=29975025600 load_duration=28849600 prompt_eval_count=99 prompt_eval_duration=10904000000 eval_count=76 eval_duration=19034000000 message=Message(role='assistant', content='Based on the provided information, the following individuals are mentioned:\\n\\n1. Tashmania65 - The email address of the course developer.\\n2. UVA - The University of Virginia, where the course was held during the summer of 2021.\\n3. 56 students - The number of students who participated in the course.', images=None, tool_calls=None)\n",
+      "final_answer: Based on the provided information, the following individuals are mentioned:\n",
+      "\n",
+      "1. Tashmania65 - The email address of the course developer.\n",
+      "2. UVA - The University of Virginia, where the course was held during the summer of 2021.\n",
+      "3. 56 students - The number of students who participated in the course.\n"
      ]
     }
    ],
